--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "node-cron": "^3.0.3",
-    "telegraf": "^4.13.1"
+    "node-schedule": "^2.1.1",
+    "telegraf": "^4.15.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
